--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "everybody-codes",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/server.js",
   "scripts": {
     "build": "tsc",
-    "search": "ts-node src/search.ts"
+    "search": "ts-node src/search.ts",
+    "start": "ts-node src/server.ts"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
     "@types/yargs": "^16.0.0",
     "ts-node": "^9.1.1",
