--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "ts-node src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
     "@types/yargs": "^16.0.0",
