--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "@types/jest": "^26.0.20",
+    "@types/leaflet": "^1.5.21",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "leaflet": "^1.7.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.5"
   },
